# BookNFT_ART

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/anetos/software/booknft/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  nftBook.cpp
app/src/main/java/com/anetos/software/booknft/activity/: NFTBookActivity.java  SplashActivity.java
app/src/main/java/com/anetos/software/booknft/infrastructure/: NFTBookApplication.java
app/src/main/java/com/anetos/software/booknft/support/: CameraSurface.java  CameraSurfaceDefault.java  PreviewListner.java  Renderer.java
app/src/main/java/com/anetos/software/booknft/support/ui/: BaseActivity.java
app/src/main/res/layout/: activity_nftbook.xml  activity_spalsh.xml  activity_splash.xml  alert_checkinternet.xml  content_nftbook.xml
app/src/main/res/layout-v21/: alert_checkinternet.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/anetos/software/booknft/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
